--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: Arial, Helvetica, sans-serif;
+
+    font-size: 10px;
+
+    color: #848484;
+    overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.content .center {
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content .center header {
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.content .center header .dados {
+    display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content .center header ul {
+    text-decoration: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    list-style: none;
+}
+
+.content .center header ul li {
+    font-size: 2rem; 
+    padding-left: 30px;
+}
+
+.content .center header ul li a {
+    font-size: 2rem;    
+    text-decoration: none;
+    transition: .3s;
+}
+
+.content .center header ul li a:hover {
+    color: #6d6d6d;
+    text-decoration: underline;
+}
+
+.content .center header .dados img {
+    width: 30px;
+    margin-left: 50px;
+}
+
+.content .center header .dados img:hover {
+    cursor: pointer;
+}
+
+.content .center main {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+}
+
+.content .center main .text {
+    width: 40vw;
+}
+
+.content .center main .text h1 {
+    font-size: 4rem;
+    color: #506269;
+
+    line-height: 1;
+}
+
+.content .center main .text p {
+    font-size: 2rem;
+
+    font-weight: 100;
+    margin: 40px 0;
+}
+
+.content .center main .text button {
+    width: 83%;
+    height: 60px;
+    font-size: 1.6rem;
+
+    border: none;
+    background: #A5410F;
+    color: white;
+    transition: .3s;
+}
+
+.content .center main .text button:hover {
+    background: #6b2a0a;
+    cursor: pointer;
+}
+
+.content .center main .content-images {
+    width: 60vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content .center main .content-images .images {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    margin-bottom: 50px;
+}
+
+.content .center main .content-images .images #abajur {
+    width: 140px;
+    margin: 0 -180px 10px 0 ;
+    z-index: 2;
+}
+
+.content .center main .content-images .images #man {
+    width: 500px;
+    z-index: 1;
+}
+
+.content .center main .content-images .images #planta {
+    width: 150px;
+    margin: 0 0 12px -130px;
+    z-index: 2;
 }
